@@ -1,63 +1,60 @@
 package com.algobuddy.backend.controller;
 
+import com.algobuddy.backend.config.annotation.CurrentUserId;
 import com.algobuddy.backend.dto.BookmarkDto;
 import com.algobuddy.backend.dto.BookmarkRequestDto;
 import com.algobuddy.backend.entity.Bookmark;
+import com.algobuddy.backend.mapper.BookmarkMapper;
 import com.algobuddy.backend.service.BookmarkService;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotBlank;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.security.oauth2.jwt.Jwt;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
-
-import org.springframework.validation.annotation.Validated;
 
 @RestController
 @RequestMapping("/api/v1/bookmarks")
 @RequiredArgsConstructor
 @Validated
+@Tag(name = "Bookmarks", description = "Endpoints for managing user bookmarks")
 public class BookmarkController {
 
     private final BookmarkService bookmarkService;
+    private final BookmarkMapper bookmarkMapper;
 
     @GetMapping
-    public ResponseEntity<List<BookmarkDto>> getBookmarks(@AuthenticationPrincipal Jwt jwt) {
-        UUID userId = UUID.fromString(jwt.getSubject());
+    @Operation(summary = "Get bookmarks", description = "Retrieves a list of bookmarks for the authenticated user.")
+    @ApiResponse(responseCode = "200", description = "Successfully retrieved bookmarks")
+    public ResponseEntity<List<BookmarkDto>> getBookmarks(@CurrentUserId UUID userId) {
         List<Bookmark> bookmarks = bookmarkService.getBookmarks(userId);
-        
         List<BookmarkDto> dtos = bookmarks.stream()
-                .map(b -> BookmarkDto.builder()
-                        .problemId(b.getProblemId())
-                        .topicSlug(b.getTopicSlug())
-                        .createdAt(b.getCreatedAt())
-                        .build())
-                .collect(Collectors.toList());
-                
+                                          .map(bookmarkMapper::toDto)
+                                          .toList();
         return ResponseEntity.ok(dtos);
     }
 
     @PostMapping
-    public ResponseEntity<Void> addBookmark(@AuthenticationPrincipal Jwt jwt, 
+    @Operation(summary = "Add bookmark", description = "Adds a new bookmark for the authenticated user.")
+    @ApiResponse(responseCode = "200", description = "Successfully added bookmark")
+    public ResponseEntity<Void> addBookmark(@CurrentUserId UUID userId, 
                                             @Valid @RequestBody BookmarkRequestDto request) {
-        UUID userId = UUID.fromString(jwt.getSubject());
         bookmarkService.addBookmark(userId, request.getProblemId(), request.getTopicSlug());
-        
         return ResponseEntity.ok().build();
     }
 
     @DeleteMapping
-    public ResponseEntity<Void> removeBookmark(@AuthenticationPrincipal Jwt jwt, 
+    @Operation(summary = "Remove bookmark", description = "Removes a specific bookmark for the authenticated user.")
+    @ApiResponse(responseCode = "200", description = "Successfully removed bookmark")
+    public ResponseEntity<Void> removeBookmark(@CurrentUserId UUID userId, 
                                                @NotBlank(message = "problemId cannot be empty") @RequestParam String problemId) {
-        UUID userId = UUID.fromString(jwt.getSubject());
-        
         bookmarkService.removeBookmark(userId, problemId);
-                
         return ResponseEntity.ok().build();
     }
 }
